@@ -13,4 +13,8 @@ This branch is in "maintenance mode". New features are on the branch
 
 x allow files > 2 GB (see TODO on bleeding_edge branch)
 x allow cachesize > 4 GB (currently it's a 32bit number)
-o new function ham_cursor_get_record_size()
+x new function ham_cursor_get_record_size()
+    - remote stub
+    - with/without dupes
+    - with/without in-memory
+
