@@ -72,12 +72,18 @@ extern "C" {
      */                                                                 \
     ham_status_t (*_fun_erase)(clss *cu, ham_u32_t flags);              \
                                                                         \
-	/**																	\
-	 * Count the number of records stored with the referenced key.		\
-	 */																	\
-	ham_status_t (*_fun_get_duplicate_count)(ham_cursor_t *cursor,		\
-			ham_size_t *count, ham_u32_t flags);						\
-																		\
+    /**                                                                 \
+     * Count the number of records stored with the referenced key.      \
+     */                                                                 \
+    ham_status_t (*_fun_get_duplicate_count)(ham_cursor_t *cursor,      \
+            ham_size_t *count, ham_u32_t flags);                        \
+                                                                        \
+    /**                                                                 \
+     * Get the record size                                              \
+     */                                                                 \
+    ham_status_t (*_fun_get_record_size)(ham_cursor_t *cursor,          \
+            ham_offset_t *size);                                        \
+                                                                        \
     /**                                                                 \
      * pointer to the Database object                                   \
      */                                                                 \
@@ -144,12 +150,12 @@ struct ham_cursor_t
 /**
  * set the 'next' pointer of the linked list
  */
-#define cursor_set_next_in_page(c, n)										\
-	{																		\
-		if (n)																\
-			ham_assert((c)->_previous_in_page!=(n), (0));					\
-		(c)->_next_in_page=(n);												\
-	}
+#define cursor_set_next_in_page(c, n)                                        \
+    {                                                                        \
+        if (n)                                                                \
+            ham_assert((c)->_previous_in_page!=(n), (0));                    \
+        (c)->_next_in_page=(n);                                                \
+    }
 
 /**
  * get the 'previous' pointer of the linked list
@@ -159,12 +165,12 @@ struct ham_cursor_t
 /**
  * set the 'previous' pointer of the linked list
  */
-#define cursor_set_previous_in_page(c, p)									\
-	{																		\
-		if (p)																\
-			ham_assert((c)->_next_in_page!=(p), (0));						\
-		(c)->_previous_in_page=(p);											\
-	}
+#define cursor_set_previous_in_page(c, p)                                    \
+    {                                                                        \
+        if (p)                                                                \
+            ham_assert((c)->_next_in_page!=(p), (0));                        \
+        (c)->_previous_in_page=(p);                                            \
+    }
 
 /**
  * set the database pointer
